# Caps

./: .gitignore  README.md
BlueCap/: ABOUT.TXT  BlueCap.cbp  BlueCap.dev  BlueCap.layout  BlueCap_private.h  BlueCap_private.rc  BlueCap_private.res  CDwlUpl.cpp  CUser.cpp  CUser.hpp  ClServ_Action.cpp  Doxyfile  FlFileObj.cpp  FlFileObj.hpp  Makefile  Makefile.win  MyFile.cpp  Serv.cpp  Serv.hpp  Serv_Action.cpp  Serv_Tools.cpp  Transaction.cpp  main.cpp  starter
RedCap/Console/src/: Makefile  Makefile.am  Makefile.in  init.c  main.c  opts.c  redcap.exe.stackdump
RedCap/Console/src/bridge/: command.c  main_bridge.c
RedCap/Console/src/bridge/functions/: error.c  receive_agreement.c  receive_broadcast.c  receive_chat.c  receive_delete_user.c  receive_download.c  receive_file_info.c  receive_file_list.c  receive_get_user.c  receive_login.c  receive_login_list.c  receive_server_msg.c  receive_upload.c  receive_user_access.c  receive_user_info.c  receive_user_list.c  test.c
RedCap/Console/src/engine/: flattened_file_object.c  main_create_down-up.c  main_engine.c  manage_transac.c  receive_file.c  send_file.c  set_user.c  task.c  transaction.c  transaction2.c
RedCap/Console/src/engine/functions/: #agreed.c#  agreed.c  cd.c  change_server.c  connect.c  delete_file.c  delete_user.c  disconnect.c  download.c  file_list_client.c  get_bookmark.c  get_file_info.c  get_file_list.c  get_login_list.c  get_user.c  get_user_list.c  help.c  lmv.c  login.c  lrm.c  manage_server.c  manage_task.c  me_info.c  mkdir.c  mv.c  my_access.c  new_user.c  pars_opt.c  preview.c  preview.c~  pwd.c  rename_file.c  send_broadcast.c  send_chat.c  send_priv_chat.c  server_name.c  set_client_info.c  set_user_edit.c  task.c  upload.c  (+1 more)
RedCap/Console/src/shared/: buffer_list.c  get_next_line.c  mon_pton.c  non_blocking_fd.c  other.c  print.c  prompt.c  read.c  std.c  tcpserv.c  wrapsock.c  write.c
docs/: HLProtocol - original.md  (+2 more)
(+160 files in other folders)
